ユーザーメールアドレス認証機能の追加

--- a/app/views/layouts/mailer.text.haml
+++ b/app/views/layouts/mailer.text.haml
@@ -1,1 +1,6 @@
-= yield
+!!!
+%html{ lang: 'ja' }
+  %head
+    %meta{ http: { equiv: 'Content-Type' }, content: 'text/html; charset=utf-8' }
+  %body
+    = yield
