トップページに商品一覧追加

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,3 +2,4 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import 'shared/style';
 @import 'views/admins/top.scss';
+@import 'views/top.scss';
