--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,1 +1,11 @@
--# TODO: 商品モデル追加後view実装
+.col-md-8.offset-md-2.mt-5
+  .row
+    - @products.each do |product|
+      .col-md-3
+        .card.border-0.mb-3.top-product
+          = product_image_tag(product, 200, 100)
+          .card-body
+            %h5.card-title
+              = link_to product.name, product_path(product), class: 'text-decoration-none'
+            %p.card-text
+              #{number_to_currency(product.price_including_tax)}（税込）
