--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -28,6 +28,9 @@
                   %th 合計
                   %td.fw-bolder.fs-5.text-end
                     = number_to_currency(total_price)
-            -# TODO: 注文モデル実装後パス変更
-            = link_to 'レジに進む', root_path, class: 'btn btn-accent w-100'
+            = link_to 'レジに進む', users_orders_path, class: 'btn btn-accent w-100'
             = link_to '買い物を続ける', root_path, class: 'btn btn-secondary w-100 mt-3'
+    - else
+      .col-md-12.bg-white.p-3
+        %p.text-center カートに商品は入っていません。
+        .text-center= link_to '買い物を続ける', root_path, class: 'btn btn-accent w-50 mt-3'
